add web module (引入web模块)、add test module (引入测试模块)、delete useless content

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,15 +1,15 @@
 server:
   port: 8050 #web端口
   servlet:
-    context-path: /sd
-    application-display-name: StartDemo
+    context-path: /nk
+    application-display-name: StarterDemo
   shutdown: graceful # 优雅关机(勿强制杀死进程)
 
 spring:
   profiles:
     active: dev
   application:
-    name: StartDemo
+    name: StarterDemo
 #  cloud:
 #    config:
 #      enabled: false
