--- a/pom.xml
+++ b/pom.xml
@@ -13,22 +13,23 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring-boot-starter-test.version>2.3.1.RELEASE</spring-boot-starter-test.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-
 		<dependency>
 			<groupId>cc.wanforme.nukkit</groupId>
 			<artifactId>wannukkit-springboot-starter</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
+		
+ 		<!-- 引入测试 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring-boot-starter-test.version}</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
