--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring-boot-starter-test.version>2.3.1.RELEASE</spring-boot-starter-test.version>
+		<spring-boot-devtools.version>2.3.1.RELEASE</spring-boot-devtools.version>
 	</properties>
 
 	<dependencies>
@@ -21,13 +22,6 @@
 			<groupId>cc.wanforme.nukkit</groupId>
 			<artifactId>wannukkit-springboot-starter</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		
- 		<!-- 引入测试 -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<version>${spring-boot-starter-test.version}</version>
 		</dependency>
 		
 	</dependencies>
@@ -61,8 +55,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<fork>true</fork> <!-- 热部署[2] -->
-					<!-- 指定主方法 -->
+					<fork>true</fork> <!-- live load. 热部署[2] -->
+					<!-- Main Class. 指定主方法 -->
 					<mainClass>cc.wanforme.nukkit.StarterDemo</mainClass>
 				</configuration>
 				<executions>
