change to save folder and files.

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -19,5 +19,6 @@ nukkit:  spring:
     # 需要在 nukkit 启动前保存到外部的文件夹,(如果已存在，会覆盖)
     # 默认 plugins 文件夹，并且starter会单独保存'plugins/PMPlus.jar',
     # (如果你的项目中也有一个 'plugins/PMPlus.jar', 则会覆盖 starter 中的 PMPlus.jar)
-    savingFoldersBeforeNukkit: plugins, config
+    # 非常不推荐把文件直接放到 resources 根目录，同时也不支持
+    savingFilesBeforeNukkit: plugins/, config/, log4j2-spring.xml
     # savingFoldersBeforeNukkit: plugins,players,worlds
