--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,14 @@
 			<artifactId>wannukkit-springboot-starter</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		
 		<!-- 
 		<dependency>
 			<groupId>cn.nukkit</groupId>
 			<artifactId>nukkit</artifactId>
 			<version>${nukkit.version}</version>
+			<scope>provided</scope> 
+			<optional>true</optional>
 		</dependency>
 		 -->
 	</dependencies>
@@ -62,7 +65,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<fork>true</fork> <!-- live load. 热部署[2] -->
+					<!-- 跳过 BOOT-INF 文件夹 -->
+					<!--<skip>true</skip>-->
+					<!-- live load. 热部署[2] -->
+					<fork>true</fork>
 					<!-- Main Class. 指定主方法 -->
 					<mainClass>cc.wanforme.nukkit.springDemo.StarterDemo</mainClass>
 				</configuration>
