--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring-boot-starter-test.version>2.3.1.RELEASE</spring-boot-starter-test.version>
-		<spring-boot-devtools.version>2.3.1.RELEASE</spring-boot-devtools.version>
 		<nukkit.version>2.0.0-SNAPSHOT</nukkit.version>
+		<spring-boot-thin-layout.version>1.0.25.RELEASE</spring-boot-thin-layout.version>
+		<spring-boot-thin-maven-plugin.version>1.0.25.RELEASE</spring-boot-thin-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -24,10 +24,6 @@
 			<artifactId>wannukkit-springboot-starter</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
-		<!-- <dependency> <groupId>cn.nukkit</groupId> <artifactId>nukkit</artifactId> 
-			<version>${nukkit.version}</version> <scope>provided</scope> <optional>true</optional> 
-			</dependency> -->
 	</dependencies>
 
 	<build>
@@ -56,21 +52,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<!-- 跳过 BOOT-INF 文件夹 -->
-					<!--<skip>true</skip> -->
-					<!-- live load. 热部署[2] -->
-					<!-- <fork>true</fork> -->
 					<!-- Main Class. 指定主方法 -->
 					<mainClass>cc.wanforme.nukkit.springDemo.StarterDemo</mainClass>
-					<!-- 剔除 nukkit -->
-					<!-- 
-					<excludes>
-						<exclude>
-							<groupId>cn.nukkit</groupId>
-							<artifactId>nukkit</artifactId>
-						</exclude>
-					</excludes>
-					 -->
 					<executable>true</executable>
 				</configuration>
 				<executions>
@@ -84,14 +67,14 @@
 					<dependency>
 						<groupId>org.springframework.boot.experimental</groupId>
 						<artifactId>spring-boot-thin-layout</artifactId>
-						<version>1.0.25.RELEASE</version>
+						<version>${spring-boot-thin-layout.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
                 <groupId>org.springframework.boot.experimental</groupId>
                 <artifactId>spring-boot-thin-maven-plugin</artifactId>
-                <version>1.0.25.RELEASE</version>
+                <version>${spring-boot-thin-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <!--在编译时下载依赖包 -->
