--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<nukkit.version>2.0.0-SNAPSHOT</nukkit.version>
+		<wannukkit-springboot-starter>1.0.0-SNAPSHOT</wannukkit-springboot-starter>
 		<spring-boot-thin-layout.version>1.0.25.RELEASE</spring-boot-thin-layout.version>
 		<spring-boot-thin-maven-plugin.version>1.0.25.RELEASE</spring-boot-thin-maven-plugin.version>
 	</properties>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>cc.wanforme.nukkit</groupId>
 			<artifactId>wannukkit-springboot-starter</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${wannukkit-springboot-starter}</version>
 		</dependency>
 	</dependencies>
 
