update property name

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<wannukkit-springboot-starter>1.0.0-SNAPSHOT</wannukkit-springboot-starter>
+		<wannukkit-springboot-starter.version>1.0.0-SNAPSHOT</wannukkit-springboot-starter.version>
 		<spring-boot-thin-layout.version>1.0.25.RELEASE</spring-boot-thin-layout.version>
 		<spring-boot-thin-maven-plugin.version>1.0.25.RELEASE</spring-boot-thin-maven-plugin.version>
 	</properties>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>cc.wanforme.nukkit</groupId>
 			<artifactId>wannukkit-springboot-starter</artifactId>
-			<version>${wannukkit-springboot-starter}</version>
+			<version>${wannukkit-springboot-starter.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -51,6 +51,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- <version>${spring-boot-maven-plugin.version}</version> -->
 				<configuration>
 					<!-- Main Class. 指定主方法 -->
 					<mainClass>cc.wanforme.nukkit.springDemo.StarterDemo</mainClass>
