--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,14 @@
 	<artifactId>StarterDemo</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
+	
+	<repositories>
+		<repository>
+            <id>wannukit-repo</id>
+            <url>http://www.repo.wanforme.cc/repository/maven-public/</url>
+        </repository>
+	</repositories>
+	
 	<build>
 		<plugins>
 			<plugin>
